# SleepSoundly

./: CMakeLists.txt  Release.pb  SleepSoundly.pb  SleepSoundly.pbp  build.bat  build_pelles.bat  main.c  main.cpp  main.h  main.rc  makefile  project.cfg  readme.md  resource.h  resource.rc
src/: app.cpp  app.hpp  main.cpp  single_instance.cpp  single_instance.hpp
